--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "react-images": "^0.5.19"
+    "react-images": "^0.5.19",
+    "react-pdf": "^4.0.5"
   },
   "keywords": [
     "gatsby"
